# emotiondet

./: .env.example  .gitignore  .gitmodules  README.md  main.py  pyproject.toml
emotiondet/: app.py  model.py  model_manager.py  schemas.py  settings.py
emotiondet/routers/: api.py  ui.py
emotiondet/static/: index.html
train/: _dataset.py  _model.py  _train.py  _utils.py  emotion-detection-eval.ipynb  emotion-detection-overview.html  emotion-detection-overview.ipynb  emotion-detection-overview.py  emotion-detection-train.ipynb  main.py
