[project]
name = "emotiondet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi<1.0.0",
    "marimo>=0.13.13",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "numpy>=1.26.4,<2.0.0",
    "pandas>2.0.0,<3.0.0",
    "protobuf==3.20.3",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>2.0.0,<3.0.0",
    "sentencepiece==0.2.0",
    "tiktoken==0.9.0",
    "transformers==4.51.3",
    "uvicorn[standard]>=0.34.2",
]
